# outbe-transaction-fingerprinting

./: .gitignore  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  buf.yaml
.github/workflows/: buf-ci.yaml  docker-publish.yml  generate-sdk.yaml
clients/java/: pom.xml
clients/kotlin/: pom.xml
crates/clients/java/src/main/java/net/outbe/common/v1/: DateOuterClass.java  TimestampOuterClass.java
crates/clients/java/src/main/java/net/outbe/fingerprint/v1/: ExternalService.java
crates/clients/java/src/main/java1/net/outbe/common/v1/: CurrencyOuterClass.java  MoneyOuterClass.java
crates/fingerprinting-cli/: Cargo.toml
crates/fingerprinting-cli/config/: agent-reference.conf  light-agent-reference.conf
crates/fingerprinting-cli/src/: config.rs
crates/fingerprinting-core/: Cargo.toml
crates/fingerprinting-core/src/: lib.rs  secret_sharing.rs
crates/fingerprinting-core/src/components/: address.rs  amount.rs  bytes32.rs  date_time_raw.rs  mod.rs
crates/fingerprinting-core/src/protocols/: collaborative_protocol.rs  mod.rs
crates/fingerprinting-grpc-agent/src/: agents_topology.rs
crates/fingerprinting-grpc/proto/net/outbe/common/v1/: currency.proto  date.proto  money.proto  timestamp.proto
crates/fingerprinting-grpc/proto/net/outbe/fingerprint/v1/: external_service.proto
crates/fingerprinting-grpc/src/: lib.rs
crates/fingerprinting-poseidon/: Cargo.toml
crates/fingerprinting-poseidon/src/: grain.rs  lib.rs  matrix.rs  permutation.rs  poseidon.rs  spec.rs
crates/fingerprinting-types/src/: lib.rs
